feat: upgraded to LWR

--- a/src/client/layouts/index.html
+++ b/src/client/layouts/index.html
@@ -17,10 +17,10 @@
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link rel="shortcut icon" href="resources/favicon.ico" />
-        <link rel="stylesheet" href="resources/dependencies/bulma.min.css" />
+        <link rel="shortcut icon" href="$assetsDir/favicon.ico" />
+        <link rel="stylesheet" href="$assetsDir/dependencies/bulma.min.css" />
     </head>
     <body>
-        <ui-app></ui-app>
+        {{{body}}} {{{lwr_resources}}}
     </body>
 </html>
